--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ section#blog {
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
+    text-align: center;
 }
 
 h2 {
@@ -109,3 +110,41 @@ i {
     height: auto; /* Maintain the image's aspect ratio */
     margin-bottom: 10px; /* Add some space below the image */
 }
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.instagram-media {
+    background: #FFF;
+    border: 0;
+    border-radius: 3px;
+    box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5), 0 1px 10px 0 rgba(0, 0, 0, 0.15);
+    margin: 1px;
+    max-width: 540px;
+    min-width: 326px;
+    padding: 0;
+    width: 100%;
+}
+
+.instagram-media > div {
+    padding: 16px;
+}
+
+.instagram-media a {
+    color: #000;
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 17px;
+    text-decoration: none;
+    word-wrap: break-word;
+}
+
