--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Pacifico', cursive; /* Change to a girly font, in this case 'Pacifico' */
+    font-family: 'Pacifico', cursive;
     margin: 0;
     padding: 0;
 }
@@ -39,18 +39,6 @@ a {
 
 a:hover {
     border-bottom: 2px solid #fff;
-}
-
-/* Optional: Add media queries for responsiveness */
-@media only screen and (max-width: 600px) {
-    nav {
-        text-align: center;
-    }
-
-    li {
-        display: block;
-        margin-bottom: 10px;
-    }
 }
 
 
@@ -106,9 +94,9 @@ i {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .image-and-text img {
-    max-width: 100%; /* Make sure the image doesn't exceed its container width */
-    height: auto; /* Maintain the image's aspect ratio */
-    margin-bottom: 10px; /* Add some space below the image */
+    max-width: 100%; 
+    height: auto; 
+    margin-bottom: 10px; 
 }
 
 .video-container {
@@ -148,3 +136,88 @@ i {
     word-wrap: break-word;
 }
 
+section#about {
+    padding: 20px;
+    margin: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .team-member {
+    background-color: #e9e9e9;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 4px;
+  }
+  
+  .team-member img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+  }
+  
+  footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
+
+  form {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 40px; 
+    border-radius: 5px;
+}
+
+form h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.form {
+    margin-bottom: 20px;
+}
+
+.form label {
+    display: block;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form select,
+.form textarea {
+    width: calc(100% - 20px); 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.form select {
+    height: 40px;
+}
+
+.form textarea {
+    height: 120px;
+}
+
+.form button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.form button:hover {
+    background-color: #555;
+}
