Changed form color

--- a/style.css
+++ b/style.css
@@ -170,8 +170,8 @@ section#about {
   }
 
   form {
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: #d6d1d1;
+    border: 1px solid #d6d1d1;
     padding: 40px; 
     border-radius: 5px;
 }
